--- a/vars_ctrl_content_org_new_jt.yml
+++ b/vars_ctrl_content_org_new_jt.yml
@@ -25,7 +25,7 @@ controller_organizations:
  
 controller_user_accounts:
   # Example admin for managing users and teams
-  - username: pcs_admin_org
+  - username: admin
     organization: PCS-DUMMY
  
 controller_roles:
