--- a/test.yml
+++ b/test.yml
@@ -3,6 +3,6 @@
   hosts: localhost
   become: false
   gather_facts: false
-  vars_files: vars_ctrl_content_org_create.yml
+  # vars_files: vars_ctrl_content_org_create.yml
   roles:
    - infra.controller_configuration.dispatch
