--- a/test.yml
+++ b/test.yml
@@ -6,7 +6,7 @@
   # vars_files: vars_ctrl_content_org_create.yml
   roles:
    - infra.controller_configuration.dispatch
-  tasks:
-    - name: include variable
-      ansible.builtin.include_vars:
-        file: vars_ctrl_content_org_create.yml
+  # tasks:
+  #   - name: include variable
+  #     ansible.builtin.include_vars:
+  #       file: vars_ctrl_content_org_create.yml
