--- a/test.yml
+++ b/test.yml
@@ -10,8 +10,11 @@
         ignore_files: [controller_config_yml.template]
         extensions:
           - ["yml"]
-  roles:
-   - {role: infra.controller_configuration.organizations, when: controller_organizations is defined}
+    - name: Call dispatch role
+      ansible.builtin.include_role:
+        name: infra.controller_configuration.dispatch
+  # roles:
+  #  - {role: infra.controller_configuration.organizations, when: controller_organizations is defined}
   
   # tasks:
   #   - name: include variable
