--- a/test.yml
+++ b/test.yml
@@ -3,6 +3,13 @@
   hosts: localhost
   become: false
   gather_facts: false
+  vars:
+    
+    # Using the Tower env names for backwards compatibility
+    controller_hostname: "{{ lookup('ansible.builtin.env', 'TOWER_HOST') }}"
+    controller_username: "{{ lookup('ansible.builtin.env', 'TOWER_USERNAME') }}"
+    controller_password: "{{ lookup('ansible.builtin.env', 'TOWER_PASSWORD') }}"
+    controller_validate_certs: "{{ lookup('ansible.builtin.env', 'TOWER_VERIFY_SSL') | default(false) }}"
   tasks:
     - name: include vars 
       ansible.builtin.include_vars:
