--- a/collections/ansible_collections/infra/controller_configuration/playbooks/configure_controller.yml
+++ b/collections/ansible_collections/infra/controller_configuration/playbooks/configure_controller.yml
@@ -2,6 +2,13 @@
 - name: Playbook to configure ansible controller post installation
   hosts: localhost
   connection: local
+  vars:
+    
+    # Using the Tower env names for backwards compatibility
+    controller_hostname: "{{ lookup('ansible.builtin.env', 'TOWER_HOST') }}"
+    controller_username: "{{ lookup('ansible.builtin.env', 'TOWER_USERNAME') }}"
+    controller_password: "{{ lookup('ansible.builtin.env', 'TOWER_PASSWORD') }}"
+    controller_validate_certs: "{{ lookup('ansible.builtin.env', 'TOWER_VERIFY_SSL') | default(false) }}"
   tasks:
     - name: Include vars from configs directory
       ansible.builtin.include_vars:
