--- a/collections/ansible_collections/infra/controller_configuration/playbooks/configure_controller.yml
+++ b/collections/ansible_collections/infra/controller_configuration/playbooks/configure_controller.yml
@@ -12,7 +12,7 @@
   tasks:
     - name: Include vars from configs directory
       ansible.builtin.include_vars:
-        dir: ./yaml
+        dir: "{{ controller_configs_dir | default((lookup('env', 'CONTROLLER_CONFIGS_DIR') == '') | ternary('./configs', lookup('env', 'CONTROLLER_CONFIGS_DIR'))) }}"
         ignore_files: [controller_config.yml.template]
         extensions: ["yml"]
       tags:
