--- a/test.yml
+++ b/test.yml
@@ -15,7 +15,7 @@
         dir: ./yaml
         ignore_files: [controller_config_yml.template]
         extensions:
-          - ['yml']
+          - ["yml"]
 
     - name: Call dispatch role
       ansible.builtin.include_role:
