--- a/yaml/vars_ctrl_content_org_create.yml
+++ b/yaml/vars_ctrl_content_org_create.yml
@@ -1,5 +1,5 @@
 ---
-controller__projects:
+__controller_projects:
   - name: Test Project
     scm_type: git
     scm_url: https://github.com/ansible/tower-example.git
