--- a/yaml/vars_ctrl_content_org_create.yml
+++ b/yaml/vars_ctrl_content_org_create.yml
@@ -1,10 +1,22 @@
+# controller_projects:
+#   - name: Test Project
+#     scm_type: git
+#     scm_url: https://github.com/ansible/tower-example.git
+#     scm_branch: master
+#     scm_clean: true
+#     description: Test Project 1
+#     organization: Default
+#     wait: true
+#     update_project: true
+---
 controller_projects:
-  - name: Test Project
-    scm_type: git
-    scm_url: https://github.com/ansible/tower-example.git
-    scm_branch: master
-    scm_clean: true
-    description: Test Project 1
-    organization: Default
-    wait: true
-    update_project: true
+- name: controller Config
+  organization: Default
+  scm_branch: master
+  scm_clean: 'no'
+  scm_delete_on_update: 'no'
+  scm_type: git
+  scm_update_on_launch: 'no'
+  scm_url: https://github.com/ansible/tower-example.git
+  notification_templates_error:
+  - Slack_for_testing
