--- a/yaml/vars_ctrl_content_org_create.yml
+++ b/yaml/vars_ctrl_content_org_create.yml
@@ -4,7 +4,7 @@ controller_projects:
     scm_url: https://github.com/ansible/tower-example.git
     scm_branch: master
     scm_clean: true
-    description: ricky 
+    description: piju 
     organization: Default
     wait: true
     update_project: true
