--- a/yaml/vars_ctrl_content_org_create.yml
+++ b/yaml/vars_ctrl_content_org_create.yml
@@ -1,10 +1,4 @@
-controller_projects:
-  - name: amarjeet
-    scm_type: git
-    scm_url: https://github.com/ansible/tower-example.git
-    scm_branch: master
-    scm_clean: true
-    description: piju 
-    organization: Default
-    wait: true
-    update_project: true
+---
+controller_organizations:
+  - name: Automation Group
+    description: This is the Automation Group
