--- a/yaml/vars_ctrl_content_project_create.yml
+++ b/yaml/vars_ctrl_content_project_create.yml
@@ -1,10 +1,10 @@
 controller_projects:
-  - name: amarjeet
+  - name: vijay
     scm_type: git
     scm_url: https://github.com/ansible/tower-example.git
     scm_branch: master
     scm_clean: true
-    description: piju 
+    description: vijay 
     organization: Default
     wait: true
     update_project: true
